--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Nunito:wght@400;700&display=swap');
 body {
     font-family: 'Nunito', sans-serif;
-    margin: 0px auto;
+    margin: 1px auto;
     width: 100%;
 }
 
@@ -10,18 +10,27 @@ hr {
 }
 
 :root {
-    --primary-color: #ea580c;
+    --primary-color: #facc15;
     --dark-gray: #64748b;
     --off-white: #f1f5f9;
 }
 
 .container {
-    padding: 0rem 1rem;
+  height: 200px;
+  position: relative;
+  border: 3px solid green;
 }
 
-.container-center {
-    max-width: 600px;
-    margin: auto;
+.center {
+  display: block;
+  margin: 0;
+  padding-bottom: 2rem;
+  padding-top: 3rem;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
 }
 
 .link {
@@ -75,8 +84,10 @@ hr {
 }
 
 .hero {
-    padding: 2rem;
+    padding: 1rem;
     display: block;
+    padding-bottom: 1rem;
+    margin-bottom: 1rem;
 }
 
 .hero .hero-img {
@@ -86,9 +97,20 @@ hr {
 }
 
 .hero .hero-heading {
-    padding-top: 1rem;
-    color: var(--dark-gray);
+
+    /* background-color: var(--off-white); */
+    padding: 0rem;
     text-align: center;
+    color:black;
+    border-top-left-radius: 0rem;
+    border-bottom-right-radius: 0rem;
+    border: 1px solid black;
+    padding-top: rem;
+   
+    color: var(--primary-color);
+    text-align: center;
+    text-shadow: 0 0 4px #FF0000, 0 0 5px #0000FF;
+    
 }
 
 .section {
@@ -108,20 +130,79 @@ hr {
     background-color: var(--primary-color);
     padding: 2rem 1rem;
     text-align: center;
-    color: white;
+    color:black;
     border-top-left-radius: 1rem;
     border-bottom-right-radius: 1rem;
 }
 
 .footer .link {
-    color: white;
+    color: rgb(0, 0, 0);
+     
 }
 
 .footer .foooter-header {
     font-weight: bold;
     font-size: large;
+
 }
 
 .footer ul {
     padding-inline-start: 0px;
 }
+
+
+/* From cssbuttons.io by @kirzin */
+button {
+
+    text-decoration:none;
+    position: absolute;
+    border: none;
+    font-size: 15px;
+    font-family: inherit;
+    color: #fff;
+    width: 10em;
+    height: 2em;
+    line-height: 2em;
+    text-align: center;
+    background: linear-gradient(90deg,#03a9f4,#f441a5,#ffeb3b,#03a9f4);
+    background-size: 300%;
+    border-radius: 30px;
+    z-index: 1;
+   }
+   
+   button:hover {
+    animation: ani 8s linear infinite;
+    border: none;
+   }
+   
+   @keyframes ani {
+    0% {
+     background-position: 0%;
+    }
+   
+    100% {
+     background-position: 400%;
+    }
+   }
+   
+   button:before {
+    content: '';
+    position: absolute;
+    top: -5px;
+    left: -5px;
+    right: -5px;
+    bottom: -5px;
+    z-index: -1;
+    background: linear-gradient(90deg,#dde00d,#18c953,#e49a12,#f40303);
+    background-size: 400%;
+    border-radius: 35px;
+    transition: 1s;
+   }
+   
+   button:hover::before {
+    filter: blur(20px);
+   }
+   
+   button:active {
+    background: linear-gradient(32deg,#dde00d,#18c953,#ffeb3b,#f40303);
+   }
