--- a/style.css
+++ b/style.css
@@ -3,6 +3,28 @@ body {
     font-family: 'Nunito', sans-serif;
     margin: 1px auto;
     width: 100%;
+    background-image: image() ;
+}
+
+html { 
+    background: url(images/Moon.svg) no-repeat center center fixed; 
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+  }
+
+  .nav-{
+    margin-top:167px;
+    width:1024px;
+    height:34px;
+}
+
+.nav-_button{
+    height:34px;
+    margin:0 auto;
+    margin-right:10px;
+    float:left;
 }
 
 hr {
@@ -14,13 +36,13 @@ hr {
     --dark-gray: #64748b;
     --off-white: #f1f5f9;
 }
-
+/* 
 .container {
   height: 200px;
   position: relative;
   border: 3px solid green;
-}
-
+} */
+/* 
 .center {
   display: block;
   margin: 0;
@@ -31,7 +53,7 @@ hr {
   left: 50%;
   -ms-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
-}
+} */
 
 .link {
     text-decoration: none;
@@ -60,7 +82,7 @@ hr {
 }
 
 .navigation {
-    background-color: var(--primary-color);
+    background-color: #32325D;
     color: white;
     padding: 1rem;
     border-bottom-left-radius: 1rem;
@@ -92,8 +114,15 @@ hr {
 
 .hero .hero-img {
     max-width: 350px;
-    display: block;
+    /* display: block; */
     margin: auto;
+}
+
+
+.hero .hero-img2 {
+    max-width: 50px;
+    /* display: block; */
+    /* margin-left: 2rem; */
 }
 
 .hero .hero-heading {
@@ -104,10 +133,10 @@ hr {
     color:black;
     border-top-left-radius: 0rem;
     border-bottom-right-radius: 0rem;
-    border: 1px solid black;
+    /* border: 1px solid black; */
     padding-top: rem;
    
-    color: var(--primary-color);
+    color: white;
     text-align: center;
     text-shadow: 0 0 4px #FF0000, 0 0 5px #0000FF;
     
@@ -127,22 +156,29 @@ hr {
 }
 
 .footer {
-    background-color: var(--primary-color);
+    background-color: whitesmoke;
     padding: 2rem 1rem;
     text-align: center;
-    color:black;
+    color: black;
     border-top-left-radius: 1rem;
-    border-bottom-right-radius: 1rem;
+    /* border-bottom-right-radius: 1rem; */
 }
 
 .footer .link {
-    color: rgb(0, 0, 0);
+    color: black;
      
 }
 
 .footer .foooter-header {
     font-weight: bold;
-    font-size: large;
+    font-size: larger;
+text-align: left;
+}
+
+.footer .foooter-header2 {
+    font-weight: bold;
+    font-size: larger;
+    text-align: start;
 
 }
 
@@ -160,10 +196,10 @@ button {
     font-size: 15px;
     font-family: inherit;
     color: #fff;
-    width: 10em;
+    /* width: 10em; */
     height: 2em;
     line-height: 2em;
-    text-align: center;
+    /* text-align: center; */
     background: linear-gradient(90deg,#03a9f4,#f441a5,#ffeb3b,#03a9f4);
     background-size: 300%;
     border-radius: 30px;
@@ -181,7 +217,7 @@ button {
     }
    
     100% {
-     background-position: 400%;
+     /* background-position: 400%; */
     }
    }
    
