--- a/style.css
+++ b/style.css
@@ -113,14 +113,14 @@ hr {
 }
 
 .hero .hero-img {
-    max-width: 350px;
+    max-width: 250px;
     /* display: block; */
     margin: auto;
 }
 
 
 .hero .hero-img2 {
-    max-width: 50px;
+    max-width: 30px;
     /* display: block; */
     /* margin-left: 2rem; */
 }
@@ -143,7 +143,7 @@ hr {
 }
 
 .section {
-    padding: 2rem;
+    padding: 1rem;
     border-radius: 1rem;
 }
 
@@ -157,7 +157,7 @@ hr {
 
 .footer {
     background-color: whitesmoke;
-    padding: 2rem 1rem;
+    padding: 0.1rem 0.1rem;
     text-align: center;
     color: black;
     border-top-left-radius: 1rem;
@@ -186,30 +186,24 @@ text-align: left;
     padding-inline-start: 0px;
 }
 
-
-/* ? */
-
-   /* From cssbuttons.io by @Custyyyy */
-#btn-translate {
-    padding-left: 33px;
-    padding-right: 33px;
-    padding-bottom: 16px;
-    padding-top: 16px;
-    border-radius: 9px;
-    background: #d5f365;
-    border: none;
+/* From cssbuttons.io by @adamgiebl */
+button {
+    background: #FBCA1F;
     font-family: inherit;
-    text-align: center;
-    cursor: pointer;
-    transition: 1s;
-    margin-bottom: 0%;
+    padding: 0.6em 1.3em;
+    font-weight: 900;
+    font-size: 18px;
+    border: 3px solid black;
+    border-radius: 0.4em;
+    box-shadow: 0.1em 0.1em;
    }
    
-   #btn-translate:hover {
-    box-shadow: 7px 5px 56px -14px #C3D900;
+   button:hover {
+    transform: translate(-0.05em, -0.05em);
+    box-shadow: 0.15em 0.15em;
    }
    
-   #btn-translate:active {
-    transform: scale(0.97);
-    box-shadow: 7px 5px 56px -10px #C3D900;
+   button:active {
+    transform: translate(0.05em, 0.05em);
+    box-shadow: 0.05em 0.05em;
    }
