--- a/style.css
+++ b/style.css
@@ -186,8 +186,7 @@ text-align: left;
     padding-inline-start: 0px;
 }
 
-/* From cssbuttons.io by @adamgiebl */
-button {
+#btn-Translate {
     background: #FBCA1F;
     font-family: inherit;
     padding: 0.6em 1.3em;
@@ -198,12 +197,71 @@ button {
     box-shadow: 0.1em 0.1em;
    }
    
-   button:hover {
+   #btn-Translate:hover {
     transform: translate(-0.05em, -0.05em);
     box-shadow: 0.15em 0.15em;
    }
    
-   button:active {
+   #btn-Translate:active {
     transform: translate(0.05em, 0.05em);
     box-shadow: 0.05em 0.05em;
    }
+
+   .btn-S {
+    font-family: inherit;
+    font-size: 13px;
+    background: black;
+    color: #FBCA1F;
+    padding: 0.3em 0.5em;
+    /* padding-left: 0.7em; */
+    /* display: flex; */
+    align-items: center;
+    border: none;
+    border-radius: 16px;
+    overflow: hidden;
+    transition: all 0.2s;
+    display: inline-flex;
+    padding: 0.2rem 0.3rem;
+    margin-left:auto;
+    /* margin-bottom: 0.5rem; */
+   }
+   
+   .btn-S span {
+    display: inline;
+    margin-left: 0.3em;
+    transition: all 0.3s ease-in-out;
+   }
+   
+   .btn-S svg {
+    display :inline;
+    transform-origin: center center;
+    transition: transform 0.3s ease-in-out;
+   }
+   
+   .btn-S:hover .svg-wrapper {
+    animation: fly-1 0.6s ease-in-out infinite alternate;
+   }
+   
+   .btn-S:hover svg {
+    transform: translateX(1.2em) rotate(45deg) scale(1.1);
+   }
+   
+   .btn-S:hover span {
+    transform: translateX(5em);
+   }
+   
+   .btn-S:active {
+    transform: scale(0.95);
+   }
+   
+   @keyframes fly-1 {
+    from {
+     transform: translateY(0.1em);
+    }
+   
+    to {
+     transform: translateY(-0.1em);
+    }
+   }
+   
+   
