--- a/style.css
+++ b/style.css
@@ -156,7 +156,7 @@ hr {
 }
 
 .footer {
-    background-color: whitesmoke;
+    background-color: black;
     padding: 0.1rem 0.1rem;
     text-align: center;
     color: black;
@@ -207,61 +207,47 @@ text-align: left;
     box-shadow: 0.05em 0.05em;
    }
 
+
    .btn-S {
-    font-family: inherit;
-    font-size: 13px;
-    background: black;
-    color: #FBCA1F;
-    padding: 0.3em 0.5em;
-    /* padding-left: 0.7em; */
-    /* display: flex; */
-    align-items: center;
+    width: 55px;
+    height: 50px;
+    font-size: 23px;
+    cursor: pointer;
     border: none;
-    border-radius: 16px;
-    overflow: hidden;
-    transition: all 0.2s;
-    display: inline-flex;
-    padding: 0.2rem 0.3rem;
-    margin-left:auto;
+    outline: none;
+    background: transparent;
+    color: #facc15;
+    /* font-family: 'Times New Roman', Times, serif; */
+    /* font-weight: 700; */
+    position: center;
+    transition: all 0.5s;
+    z-index: 1;
     /* margin-bottom: 0.5rem; */
-   }
-   
-   .btn-S span {
     display: inline;
-    margin-left: 0.3em;
-    transition: all 0.3s ease-in-out;
    }
    
-   .btn-S svg {
-    display :inline;
-    transform-origin: center center;
-    transition: transform 0.3s ease-in-out;
+   .btn-S::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 0.5px;
+    height: 100%;
+    /* background-color: var(--primary-color); */
+    z-index: -1;
+    transition: all 0.5s;
    }
    
-   .btn-S:hover .svg-wrapper {
-    animation: fly-1 0.6s ease-in-out infinite alternate;
+   .btn-S:hover::before {
+    width: 100%;
    }
    
-   .btn-S:hover svg {
-    transform: translateX(1.2em) rotate(45deg) scale(1.1);
+   .btn-S:hover {
+    color: white;
    }
    
-   .btn-S:hover span {
-    transform: translateX(5em);
-   }
-   
-   .btn-S:active {
-    transform: scale(0.95);
-   }
-   
-   @keyframes fly-1 {
-    from {
-     transform: translateY(0.1em);
-    }
-   
-    to {
-     transform: translateY(-0.1em);
-    }
+   .btn-S:active:before {
+    background: var(--font-color);
    }
    
    
